AGILE-0000-fix-delete-resources: Fix serialization of DeleteResourcesRequestDto